force-app/main/default/objects/Production__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client who owned the project at the time of Production</description>
    <inlineHelpText>Client who owned the project at the time of Production</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>