force-app/main/default/objects/Production__c/fields/Credits_Available_for_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Credits_Available_for_Allocation__c</fullName>
    <formula>Credits_Generated__c  -   Pre_Transfer_Reductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credits Generated - PreTransfer Reductions</inlineHelpText>
    <label>Credits Available for Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>