force-app/main/default/objects/Production__c/fields/Credits_Billed__c.field-meta.xml
<CustomField>
    <fullName>Credits_Billed__c</fullName>
    <description>Rollup of Transfer Parts with Type = Bill</description>
    <label>Credits Billed</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        
            <field>Transfer_Part__c.Type__c</field>
        
            <operation>equals</operation>
        
            <value>Bill</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>