force-app/main/default/objects/Production__c/fields/Credits_Externally_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Credits_Externally_Serviced__c</fullName>
    <inlineHelpText>Portions of the project that are billed by a party other than Perch</inlineHelpText>
    <label>Credits Externally Serviced</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        
            <field>Transfer_Part__c.Type__c</field>
        
            <operation>equals</operation>
        
            <value>Externally Serviced</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>