force-app/main/default/objects/Production__c/fields/Credits_Generated__c.field-meta.xml
<CustomField>
    <fullName>Credits_Generated__c</fullName>
    <label>Credits Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>