force-app/main/default/objects/Production__c/fields/Credits_No_Longer_Billing__c.field-meta.xml
<CustomField>
    <fullName>Credits_No_Longer_Billing__c</fullName>
    <inlineHelpText>Rollup of parts with Type = No Longer Billing</inlineHelpText>
    <label>Credits No Longer Billing</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transfer_Part__c.Type__c</field>
        <operation>equals</operation>
        <value>No Longer Billing</value>
    </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>