force-app/main/default/objects/Production__c/fields/Credits_Paid__c.field-meta.xml
<CustomField>
    <fullName>Credits_Paid__c</fullName>
    <inlineHelpText>Rollup of parts with Type = Payment</inlineHelpText>
    <label>Credits Paid</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transfer_Part__c.Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>