force-app/main/default/objects/Production__c/fields/Credits_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Credits_Transferred__c</fullName>
    <description>Rollup of parts with Type = &quot;Transfer&quot; and &quot;Reduce for Allocation&quot; checkbox = false.</description>
    <inlineHelpText>Rollup of parts with Type = &quot;Transfer&quot; and &quot;Reduce for Allocation&quot; checkbox = false.</inlineHelpText>
    <label>Credits Transferred</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        
            <field>Transfer_Part__c.Reduce_Available_for_Allocation__c</field>
        
            <operation>equals</operation>
        
            <value>False</value>
        
        </summaryFilterItems>
    <summaryFilterItems>
        
            <field>Transfer_Part__c.Type__c</field>
        
            <operation>equals</operation>
        
            <value>Transfer</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>