force-app/main/default/objects/Production__c/fields/Credits_Transferred_to_BW_or_Client__c.field-meta.xml
<CustomField>
    <fullName>Credits_Transferred_to_BW_or_Client__c</fullName>
    <inlineHelpText>Sum of all transfers where Transfer Type = BW or Client</inlineHelpText>
    <label>Credits Transferred to BW or Client</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transfer_Part__c.Transfer_Transferred_To__c</field>
        <operation>notEqual</operation>
        <value>Customer</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transfer_Part__c.Type__c</field>
        <operation>equals</operation>
        <value>Transfer</value>
    </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>