force-app/main/default/objects/Production__c/fields/Customer_Savings__c.field-meta.xml
<CustomField>
    <fullName>Customer_Savings__c</fullName>
    <inlineHelpText>Rollup of Customer Savings from related Production Details</inlineHelpText>
    <label>Customer Savings</label>
    <summarizedField>Transfer_Part__c.Customer_Savings__c</summarizedField>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>