force-app/main/default/objects/Production__c/fields/First_Date_Production_Billed__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Production_Billed__c</fullName>
    <description>First date the production period is billed via a main transfer - from Bill Period Date</description>
    <inlineHelpText>First date the production period is billed via a main transfer</inlineHelpText>
    <label>First Date Production Billed</label>
    <type>Date</type>
</CustomField>