force-app/main/default/objects/Production__c/fields/kWh_Transferred__c.field-meta.xml
<CustomField>
    <fullName>kWh_Transferred__c</fullName>
    <label>kWh Transferred</label>
    <summarizedField>Transfer_Part__c.kWh_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transfer_Part__c.Type__c</field>
        <operation>equals</operation>
        <value>Transfer</value>
    </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>