force-app/main/default/objects/Production__c/fields/Main_Transfer_Default_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Main_Transfer_Default_Credit_Value__c</fullName>
    <inlineHelpText>Max of Production Detail&apos;s &quot;Main Transfer Default Credit Value&quot;</inlineHelpText>
    <label>Main Transfer Default Credit Value</label>
    <summarizedField>Transfer_Part__c.Main_Transfer_Default_Credit_Value__c</summarizedField>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>