force-app/main/default/objects/Production__c/fields/Main_Transfer_Default_Credit_Value_Input__c.field-meta.xml
<CustomField>
    <fullName>Main_Transfer_Default_Credit_Value_Input__c</fullName>
    <inlineHelpText>This is used in the Production Input flow to store the credit value that will be used when the Main Transfer is eventually created. It is needed because the Credit Value is stored on the Host Account bill which is created before transfer is created.</inlineHelpText>
    <label>Main Transfer Default Credit Value Input</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>