force-app/main/default/objects/Production__c/fields/Pre_Transfer_Reductions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transfer_Reductions__c</fullName>
    <inlineHelpText>Sum of Parts where &quot;Reduce Available for Allocation&quot; is TRUE (Incentive Payments and Fees)</inlineHelpText>
    <label>Pre-Transfer Reductions</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transfer_Part__c.Reduce_Available_for_Allocation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>