force-app/main/default/objects/Production__c/fields/Production_kWh__c.field-meta.xml
<CustomField>
    <fullName>Production_kWh__c</fullName>
    <label>Production (kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>