force-app/main/default/objects/Production__c/fields/Unbilled_Credits__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Credits__c</fullName>
    <formula>Credits_Transferred__c - Credits_Transferred_to_BW_or_Client__c - Customer_Savings__c - Credits_Billed__c - Credits_Externally_Serviced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unbilled credits. Credits Transferred - Credits Billed. If transferred credits have not yet been billed, this value will be positive</inlineHelpText>
    <label>Pending Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>