force-app/main/default/objects/Production__c/fields/Unpaid_Credits__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Credits__c</fullName>
    <formula>Credits_Billed__c - Credits_Paid__c -  Credits_No_Longer_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Credits. Credits Billed - Credits Paid - Credits No Longer Billing. Billed amounts that have not yet been paid, or will not be paid.</inlineHelpText>
    <label>Customer Receivable</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>