force-app/main/default/objects/Production__c/fields/Unsubscribed_Credits__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_Credits__c</fullName>
    <label>Unsubscribed Credits</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        
            <field>Transfer_Part__c.Type__c</field>
        
            <operation>equals</operation>
        
            <value>Unsubscribed Credits</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>