force-app/main/default/objects/Production__c/fields/Untransferred_Credits__c.field-meta.xml
<CustomField>
    <fullName>Untransferred_Credits__c</fullName>
    <description>Untransferred credits. If the project isn’t fully subscribed, non-transferred credits remain on the host account. Credits Generated - Credits Transferred</description>
    <formula>Credits_Available_for_Allocation__c - Credits_Transferred__c - Unsubscribed_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Untransferred credits. If the project isn’t fully subscribed, non-transferred credits remain on the host account. Credits Generated - Credits Transferred</inlineHelpText>
    <label>Unallocated ($)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>