force-app/main/default/objects/Production__c/fields/Untransferred_kWh__c.field-meta.xml
<CustomField>
    <fullName>Untransferred_kWh__c</fullName>
    <description>Untransferred credits. If the project isn’t fully subscribed, non-transferred credits remain on the host account. Credits Generated - Credits Transferred</description>
    <formula>Production_kWh__c - kWh_Transferred__c - Unsubscribed_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Untransferred credits. If the project isn’t fully subscribed, non-transferred credits remain on the host account. Credits Generated - Credits Transferred</inlineHelpText>
    <label>Unallocated (kWh)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>