force-app/main/default/objects/Production__c/fields/Utility_Fees__c.field-meta.xml
<CustomField>
    <fullName>Utility_Fees__c</fullName>
    <description>Rollup of Transfer Parts Amount field with Type = Fee</description>
    <label>XXUtility Fees</label>
    <summarizedField>Transfer_Part__c.Amount__c</summarizedField>
    <summaryFilterItems>
        
            <field>Transfer_Part__c.Type__c</field>
        
            <operation>equals</operation>
        
            <value>Fee</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Transfer_Part__c.Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>