force-app/main/default/objects/Production__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <description>Production records set to verified when Bill Period and its Main Transfer have been QCed</description>
    <inlineHelpText>Production records set to verified when Bill Period and its Main Transfer have been QCed</inlineHelpText>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pending Verification</fullName>
                
                    <default>true</default>
                
                    <label>Pending Verification</label>
                
                </value>
            
                <value>
                
                    <fullName>Verified</fullName>
                
                
                    <label>Verified</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>