force-app/main/default/objects/Production__c/validationRules/Require_Billing_Method_to_Create_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Billing_Method_to_Create_Record</fullName>
    <active>true</active>
    <description>The Billing Method field on SSS should be populated for a Production record to be created.</description>
    <errorConditionFormula>ISPICKVAL(Shared_Solar_System__r.Billing_Method__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>The Billing Method field on SSS needs to be populated for a Production record to be created.</errorMessage>
</ValidationRule>